// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionRecipients should render a recipients array 1`] = `
<div>
  <div
    class="sc-AxmLO cvWCIb"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-700"
      >
        Recipients (2)
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="-my-2"
        >
          <div
            class="sc-Axmtr SNYwX"
          >
            <div
              class="sc-AxhUy gupDsa -mt-3"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
                    role="row"
                  >
                    <th
                      class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top hidden"
                      >
                        <div>
                          Avatar
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top hidden"
                      >
                        <div>
                          Address
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-inline align-top hidden"
                      >
                        <div>
                          Amount
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
                    data-testid="recipient-list__recipient-list-item"
                  >
                    <td
                      class="w-12 py-4"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="test-address"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                            title="test-address"
                          />
                        </div>
                      </div>
                    </td>
                    <td
                      class="py-4"
                    >
                      <div
                        class="max-w-lg"
                      >
                        <div
                          class="inline-flex items-center"
                        >
                          <span
                            class="sc-AxjAm StDqN text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            test-address
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class="py-4 text-right"
                    >
                      <div
                        class="sc-AxhCb jceXZf"
                        color="danger"
                      >
                        <span
                          data-testid="Amount"
                        >
                          0.00000001 DARK
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
                    data-testid="recipient-list__recipient-list-item"
                  >
                    <td
                      class="w-12 py-4"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="test-address"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                            title="test-address"
                          />
                        </div>
                      </div>
                    </td>
                    <td
                      class="py-4"
                    >
                      <div
                        class="max-w-lg"
                      >
                        <div
                          class="inline-flex items-center"
                        >
                          <span
                            class="sc-AxjAm StDqN text-theme-text truncate font-semibold text-base"
                            data-testid="address__wallet-address"
                          >
                            test-address
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class="py-4 text-right"
                    >
                      <div
                        class="sc-AxhCb jceXZf"
                        color="danger"
                      >
                        <span
                          data-testid="Amount"
                        >
                          0.00000001 DARK
                        </span>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionRecipients should render a single recipient 1`] = `
<div>
  <div
    class="sc-AxmLO cvWCIb"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-700"
      >
        Recipient
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="inline-flex items-center"
        >
          <span
            class="sc-AxjAm StDqN text-theme-text truncate font-semibold text-base"
            data-testid="address__wallet-address"
          >
            test-address
          </span>
        </div>
      </div>
    </div>
    <div
      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
      data-testid="Avatar"
    >
      <div
        class="w-full h-full"
      >
        <img
          alt="test-address"
          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
          title="test-address"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionRecipients should render a single recipient with alias 1`] = `
<div>
  <div
    class="sc-AxmLO cvWCIb"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-700"
      >
        Recipient
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="inline-flex items-center"
        >
          <span
            class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
            data-testid="address__wallet-name"
          >
            test-alias
          </span>
          <span
            class="sc-AxjAm StDqN text-theme-neutral-500 dark:text-theme-neutral-700 truncate font-semibold text-base"
            data-testid="address__wallet-address"
          >
            test-address
          </span>
        </div>
      </div>
    </div>
    <div
      class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
      data-testid="Avatar"
    >
      <div
        class="w-full h-full"
      >
        <img
          alt="test-address"
          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
          title="test-address"
        />
      </div>
    </div>
  </div>
</div>
`;
